--- a/index.html
+++ b/index.html
@@ -5,7 +5,102 @@
     <title>Reservia</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="" alt="logo reservia"/>
+        <nav>
+            <a href="">H&eacute;bergement</a>
+            <a href="">Activit&eacute;s</a>
+            <a href="">S&rsquo;inscrire</a>
+        </nav>
+    </header>
+    <section>
+        <h1>Trouvez votre h&eacute;bergement pour des vacances de r&ecirc;ves</h1>
+        <h3>En plein centre ville ou en pleine nature</h3>
+        <div>
+            <img src="" alt="icon position"/>
+            <input type ="search"/>
+            <button>Rechercher</button>
+        </div>        
+    </section>
+    <section>
+        <div>
+            <h1>Filtres</h1>
+            <div>
+                <img src="" alt="icon &eacute;conomique"/>
+                <a href="">&Eacute;conomique</a>
+            </div>
+            <div>
+                <img src="" alt="icon familial"/>
+                <a href="">Familial</a>
+            </div>
+            <div>
+                <img src="" alt="icon romantique"/>
+                <a href="">Romantique</a>
+            </div>
+            <div>
+                <img src="" alt="icon animaux autoris&eacute;s"/>
+                <a href="">Animaux autoris&eacute;s</a>
+            </div>
+            <div>
+                <img src="" alt="icon information"/>
+                <h3>Plus de 500 logements sont disponibles dans cette ville</h3>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h1>H&eacutebergements &agrave; Marseille</h1>
+        <div>
+            <div>
+                <img src="" alt="image auberge canebi&egrave;re"/>
+                <div>
+                    <h2>Auberge la Canebi&egrave;re</h2>
+                    <h3>Nuit &agrave; partir de</h3><b>25&euro;</b>
+                    <img src="" alt="note 4 sur 5"/>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="image auberge canebi&egrave;re"/>
+                <div>
+                    <h2>H&ocirc;tel du port</h2>
+                    <h3>Nuit &agrave; partir de 52</h3><b>&euro;</b>
+                    <img src="" alt="note 5 sur 5"/>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="image auberge canebi&egrave;re"/>
+                <div>
+                    <h2>H&ocirc;tel Les mouettes</h2>
+                    <h3>Nuit &agrave; partir de 76</h3><b>&euro;</b>
+                    <img src="" alt="note 4 sur 5"/>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="image auberge canebi&egrave;re"/>
+                <div>
+                    <h2>H&ocirc;tel de la mer</h2>
+                    <h3>Nuit &agrave; partir de 46</h3><b>&euro;</b>
+                    <img src="" alt="note 3 sur 5"/>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="image auberge canebi&egrave;re"/>
+                <div>
+                    <h2>Auberge Le Panier</h2>
+                    <h3>Nuit &agrave; partir de</h3><b>23&euro;</b>
+                    <img src="" alt="note 4 sur 5"/>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="image auberge canebi&egrave;re"/>
+                <div>
+                    <h2>H&ocirc;tel chez Amina</h2>
+                    <h3>Nuit &agrave; partir de 96</h3><b>&euro;</b>
+                    <img src="" alt="note 5 sur 5"/>
+                </div>
+            </div>
+        </div>
+        <h2>Afficher plus</h2>
+    </section>
     <footer></footer>
 </body>
 </html>
