--- a/index.html
+++ b/index.html
@@ -1,106 +1,251 @@
 <!DOCTYPE html>
-<html lang ="fr">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <title>Reservia</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/924975b46e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <img src="" alt="logo reservia"/>
+    <header id="header">
+        <img src="images/logo/Reservia@3x.png" alt="logo reservia"/>
         <nav>
-            <a href="">H&eacute;bergement</a>
-            <a href="">Activit&eacute;s</a>
-            <a href="">S&rsquo;inscrire</a>
+            <a href="">Hébergement</a>
+            <a href="">Activités</a>
+            <a href="">S'inscrire</a>
         </nav>
     </header>
     <section>
-        <h1>Trouvez votre h&eacute;bergement pour des vacances de r&ecirc;ves</h1>
-        <h3>En plein centre ville ou en pleine nature</h3>
+        <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
+        <h2>En plein centre ville ou en pleine nature</h2>
         <div>
-            <img src="" alt="icon position"/>
+            <i class="fas fa-map-marker-alt"></i>
             <input type ="search"/>
             <button>Rechercher</button>
         </div>        
+    
+        <div>
+            <span>Filtres</span>
+            <ul>
+                <li>
+                    <i class="fas fa-money-bill-wave"></i>
+                    <a href="">&Eacute;conomique</a>
+                </li>
+                <li>
+                    <i class="fas fa-child"></i>
+                    <a href="">Familial</a>
+                </li>
+                <li>
+                    <i class="fas fa-heart"></i>
+                    <a href="">Romantique</a>
+                </li>
+                <li>
+                    <i class="fas fa-dog"></i>
+                    <a href="">Animaux autorisés</a>
+                </li>
+            </ul>
+            <p>
+                <i class="fas fa-info-circle"></i>
+                Plus de 500 logements sont disponibles dans cette ville
+            </p>
+        </div>
     </section>
     <section>
         <div>
-            <h1>Filtres</h1>
+            <h1>Hébergements à Marseille</h1>
             <div>
-                <img src="" alt="icon &eacute;conomique"/>
-                <a href="">&Eacute;conomique</a>
+                <div>
+                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge canebière"/>
+                    <div>
+                        <h2>Auberge la Canebière</h2>
+                        <p>Nuit à partir de<b>25&euro;</b></p>
+                        <div>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="image hôtel du port"/>
+                    <div>
+                        <h2>Hôtel du port</h2>
+                        <p>Nuit à partir de 52<b>&euro;</b></p>
+                        <div>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="image hôtel les mouettes"/>
+                    <div>
+                        <h2>Hôtel Les mouettes</h2>
+                        <p>Nuit à partir de 76<b>&euro;</b></p>
+                        <div>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="image hôtel de la mer"/>
+                    <div>
+                        <h2>Hôtel de la mer</h2>
+                        <p>Nuit à partir de 46<b>&euro;</b></p>
+                        <div>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="image auberge le panier"/>
+                    <div>
+                        <h2>Auberge Le Panier</h2>
+                        <p>Nuit à partir de<b>23&euro;</b></p>
+                        <div>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="image hôtel chez amina"/>
+                    <div>
+                        <h2>Hôtel chez Amina</h2>
+                        <p>Nuit &agrave; partir de 96<b>&euro;</b></p>
+                        <div>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="">Afficher plus</a>
+        </div>
+        <div>
+            <div>
+                <h1>Les plus populaires</h1>
+                icon
             </div>
             <div>
-                <img src="" alt="icon familial"/>
-                <a href="">Familial</a>
-            </div>
-            <div>
-                <img src="" alt="icon romantique"/>
-                <a href="">Romantique</a>
-            </div>
-            <div>
-                <img src="" alt="icon animaux autoris&eacute;s"/>
-                <a href="">Animaux autoris&eacute;s</a>
-            </div>
-            <div>
-                <img src="" alt="icon information"/>
-                <h3>Plus de 500 logements sont disponibles dans cette ville</h3>
+                <div>
+                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="image hôtel le soleil du matin">
+                    <div>
+                        <div>
+                            <h2>Hôtel Le soleil du matin</h2>
+                            <p>Nuit à partir de 128<b>&euro;</b></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="image hôtel le soleil du matin">
+                    <div>
+                        <div>
+                            <h2>Au coeur de l'eau</h2><br>Chambres d'hôtes</h2>
+                            <p>Nuit à partir de 71<b>&euro;</b></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="image hôtel le soleil du matin">
+                    <div>
+                        <div>
+                            <h2>Hôtel Tout bleu et Blanc</h2>
+                            <p>Nuit à partir de 68<b>&euro;</b></p>
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <section>
-        <h1>H&eacutebergements &agrave; Marseille</h1>
+        <h1>Activités à Marseille</h1>
         <div>
             <div>
-                <img src="" alt="image auberge canebi&egrave;re"/>
-                <div>
-                    <h2>Auberge la Canebi&egrave;re</h2>
-                    <h3>Nuit &agrave; partir de</h3><b>25&euro;</b>
-                    <img src="" alt="note 4 sur 5"/>
-                </div>
+                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image vieux port">
+                <p>Vieux Port</p>
             </div>
             <div>
-                <img src="" alt="image auberge canebi&egrave;re"/>
-                <div>
-                    <h2>H&ocirc;tel du port</h2>
-                    <h3>Nuit &agrave; partir de 52</h3><b>&euro;</b>
-                    <img src="" alt="note 5 sur 5"/>
-                </div>
+                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image vieux port">
+                <p>Fort de Pomègues</p>
             </div>
             <div>
-                <img src="" alt="image auberge canebi&egrave;re"/>
-                <div>
-                    <h2>H&ocirc;tel Les mouettes</h2>
-                    <h3>Nuit &agrave; partir de 76</h3><b>&euro;</b>
-                    <img src="" alt="note 4 sur 5"/>
-                </div>
+                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="image vieux port">
+                <p>&Icirc;les du Frioul</p>
             </div>
             <div>
-                <img src="" alt="image auberge canebi&egrave;re"/>
-                <div>
-                    <h2>H&ocirc;tel de la mer</h2>
-                    <h3>Nuit &agrave; partir de 46</h3><b>&euro;</b>
-                    <img src="" alt="note 3 sur 5"/>
-                </div>
+                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image vieux port">
+                <p>Parc National des Calanques</p>
             </div>
             <div>
-                <img src="" alt="image auberge canebi&egrave;re"/>
-                <div>
-                    <h2>Auberge Le Panier</h2>
-                    <h3>Nuit &agrave; partir de</h3><b>23&euro;</b>
-                    <img src="" alt="note 4 sur 5"/>
-                </div>
+                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="image vieux port">
+                <p>Notre Dame-de-la-Garde</p>
             </div>
             <div>
-                <img src="" alt="image auberge canebi&egrave;re"/>
-                <div>
-                    <h2>H&ocirc;tel chez Amina</h2>
-                    <h3>Nuit &agrave; partir de 96</h3><b>&euro;</b>
-                    <img src="" alt="note 5 sur 5"/>
-                </div>
-            </div>
+                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="image vieux port">
+                <p>Parc Longchamp</p>
+            </div>  
         </div>
-        <h2>Afficher plus</h2>
     </section>
-    <footer></footer>
+    <footer>
+        <div>
+            <h1>A propos</h1>
+            <a href="">Fonctionnement du site</a>
+            <a href="">Conditions générales de vente</a>
+            <a href="">Données et confidentialité</a>
+        </div>
+        <div>
+            <h1>Nos hébergements</h1>
+            <a href="">Charte qualité</a>
+            <a href="">Soummettre votre hôtel</a>
+        </div>
+        <div>
+            <h1>Assistance</h1>>
+            <a href="">Centre d'aide</a>
+            <a href="">Nous contacter</a>
+        </div>
+    </footer>
 </body>
 </html>
