--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8">
     <title>Reservia</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/924975b46e.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header id="header">
-        <img src="images/logo/Reservia@3x.png" alt="logo reservia"/>
+        <img src="images/logo/Reservia@3x.png" alt="logo reservia" />
         <nav>
             <a href="">Hébergement</a>
             <a href="">Activités</a>
@@ -23,10 +25,10 @@
         <h2>En plein centre ville ou en pleine nature</h2>
         <div>
             <i class="fas fa-map-marker-alt"></i>
-            <input type ="search"/>
+            <input type="search" />
             <button>Rechercher</button>
-        </div>        
-    
+        </div>
+
         <div>
             <span>Filtres</span>
             <ul>
@@ -53,199 +55,205 @@
             </p>
         </div>
     </section>
-    <section>
+
+    <article>
+        <h3>Hébergements à Marseille</h3>
         <div>
-            <h1>Hébergements à Marseille</h1>
             <div>
+                <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    alt="image auberge canebière" />
                 <div>
-                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge canebière"/>
+                    <h4>Auberge la Canebière</h4>
+                    <p>Nuit à partir de<b>25&euro;</b></p>
                     <div>
-                        <h2>Auberge la Canebière</h2>
-                        <p>Nuit à partir de<b>25&euro;</b></p>
-                        <div>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="image hôtel du port"/>
-                    <div>
-                        <h2>Hôtel du port</h2>
-                        <p>Nuit à partir de 52<b>&euro;</b></p>
-                        <div>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                </div>
-                <div>
-                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="image hôtel les mouettes"/>
-                    <div>
-                        <h2>Hôtel Les mouettes</h2>
-                        <p>Nuit à partir de 76<b>&euro;</b></p>
-                        <div>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="image hôtel de la mer"/>
-                    <div>
-                        <h2>Hôtel de la mer</h2>
-                        <p>Nuit à partir de 46<b>&euro;</b></p>
-                        <div>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="image auberge le panier"/>
-                    <div>
-                        <h2>Auberge Le Panier</h2>
-                        <p>Nuit à partir de<b>23&euro;</b></p>
-                        <div>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="image hôtel chez amina"/>
-                    <div>
-                        <h2>Hôtel chez Amina</h2>
-                        <p>Nuit &agrave; partir de 96<b>&euro;</b></p>
-                        <div>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
                     </div>
                 </div>
             </div>
-            <a href="">Afficher plus</a>
-        </div>
-        <div>
             <div>
-                <h1>Les plus populaires</h1>
-                icon
+                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="image hôtel du port" />
+                <div>
+                    <h4>Hôtel du port</h4>
+                    <p>Nuit à partir de 52<b>&euro;</b></p>
+                    <div>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
             </div>
             <div>
+                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                    alt="image hôtel les mouettes" />
                 <div>
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="image hôtel le soleil du matin">
+                    <h4>Hôtel Les mouettes</h4>
+                    <p>Nuit à partir de 76<b>&euro;</b></p>
                     <div>
-                        <div>
-                            <h2>Hôtel Le soleil du matin</h2>
-                            <p>Nuit à partir de 128<b>&euro;</b></p>
-                            <div>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                        </div>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
                     </div>
                 </div>
+            </div>
+            <div>
+                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                    alt="image hôtel de la mer" />
                 <div>
-                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="image hôtel le soleil du matin">
+                    <h4>Hôtel de la mer</h4>
+                    <p>Nuit à partir de 46<b>&euro;</b></p>
                     <div>
-                        <div>
-                            <h2>Au coeur de l'eau</h2><br>Chambres d'hôtes</h2>
-                            <p>Nuit à partir de 71<b>&euro;</b></p>
-                            <div>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </div>
-                        </div>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
                     </div>
                 </div>
+            </div>
+            <div>
+                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                    alt="image auberge le panier" />
                 <div>
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="image hôtel le soleil du matin">
+                    <h4>Auberge Le Panier</h4>
+                    <p>Nuit à partir de<b>23&euro;</b></p>
                     <div>
-                        <div>
-                            <h2>Hôtel Tout bleu et Blanc</h2>
-                            <p>Nuit à partir de 68<b>&euro;</b></p>
-                            <div>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </div>
-                        </div>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                    alt="image hôtel chez amina" />
+                <div>
+                    <h4>Hôtel chez Amina</h4>
+                    <p>Nuit &agrave; partir de 96<b>&euro;</b></p>
+                    <div>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <section>
-        <h1>Activités à Marseille</h1>
+        <a href="">Afficher plus</a>
+    </article>
+    <article>
         <div>
+            <h3>Les plus populaires</h3>
+            <i class="fas fa-chart-line"></i>
+        </div>
+        <div>
+            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                alt="image hôtel le soleil du matin">
             <div>
+                <h4>Hôtel Le soleil du matin</h4>
+                <p>Nuit à partir de 128<b>&euro;</b></p>
+                <div>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+            </div>
+        </div>
+        <div>
+            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                alt="image hôtel le soleil du matin">
+            <div>
+                <h4>Au coeur de l'eau</h4><br>Chambres d'hôtes</h2>
+                <p>Nuit à partir de 71<b>&euro;</b></p>
+                <div>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+            </div>
+        </div>
+        <div>
+            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                alt="image hôtel le soleil du matin">
+            <div>
+                <h4>Hôtel Tout bleu et Blanc</h4>
+                <p>Nuit à partir de 68<b>&euro;</b></p>
+                <div>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <section>
+        <h3>Activités à Marseille</h3>
+        <div>
+            <figure>
                 <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image vieux port">
-                <p>Vieux Port</p>
-            </div>
+                <figcaption>Vieux Port</figcaption>
+            </figure>
             <div>
-                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image vieux port">
-                <p>Fort de Pomègues</p>
+                <figure>
+                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image vieux port">
+                    <figcaption>Fort de Pomègues</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="image vieux port">
+                    <figcaption>&Icirc;les du Frioul</figcaption>
+                </figure>
+                <figure>
             </div>
+            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image vieux port">
+            <figcaption>Parc National des Calanques</figcaption>
+            </figure>
             <div>
-                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="image vieux port">
-                <p>&Icirc;les du Frioul</p>
+                <figure>
+                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="image vieux port">
+                    <figcaption>Notre Dame-de-la-Garde</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="image vieux port">
+                    <figcaption>Parc Longchamp</figcaption>
+                </figure>
             </div>
-            <div>
-                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image vieux port">
-                <p>Parc National des Calanques</p>
-            </div>
-            <div>
-                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="image vieux port">
-                <p>Notre Dame-de-la-Garde</p>
-            </div>
-            <div>
-                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="image vieux port">
-                <p>Parc Longchamp</p>
-            </div>  
         </div>
     </section>
     <footer>
         <div>
-            <h1>A propos</h1>
+            <h3>A propos</h3>
             <a href="">Fonctionnement du site</a>
             <a href="">Conditions générales de vente</a>
             <a href="">Données et confidentialité</a>
         </div>
         <div>
-            <h1>Nos hébergements</h1>
+            <h3>Nos hébergements</h3>
             <a href="">Charte qualité</a>
             <a href="">Soummettre votre hôtel</a>
         </div>
         <div>
-            <h1>Assistance</h1>>
+            <h3>Assistance</h3>
             <a href="">Centre d'aide</a>
             <a href="">Nous contacter</a>
         </div>
     </footer>
 </body>
+
 </html>
