finalisation des fichiers html et css

--- a/index.html
+++ b/index.html
@@ -318,35 +318,35 @@
             <a href="#" class="activite">
                 <img class="image_activite_100" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                     alt="image vieux port">
-                <figcaption>Vieux Port</figcaption>
+                <h4>Vieux Port</h4>
             </a>
             <div class="activite_double">
                 <a href="#" class="activite_double_sup">
                     <img class="image_activite_50" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                         alt="image vieux port">
-                    <figcaption>Fort de Pomègues</figcaption>
+                    <h4>Fort de Pomègues</h4>
                 </a>
                 <a href="#" class="activite_double_inf">
                     <img class="image_activite_30" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                         alt="image vieux port">
-                    <figcaption>&Icirc;les du Frioul</figcaption>
+                    <h4>&Icirc;les du Frioul</h4>
                 </a>
             </div>
             <a href="#" class="activite">
                 <img class="image_activite_100"
                     src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image vieux port">
-                <figcaption>Parc National des Calanques</figcaption>
+                <h4>Parc National des Calanques</h4>
             </a>
             <div class="activite_double">
                 <a href="#" class="activite_double_sup">
                     <img class="image_activite_30" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                         alt="image vieux port">
-                    <figcaption>Notre Dame-de-la-Garde</figcaption>
+                    <h4>Notre Dame-de-la-Garde</h4>
                 </a>
                 <a href="#" class="activite_double_inf">
                     <img class="image_activite_50" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                         alt="image vieux port">
-                    <figcaption>Parc Longchamp</figcaption>
+                    <h4>Parc Longchamp</h4>
                 </a>
             </div>
         </div>
