--- a/index.html
+++ b/index.html
@@ -25,19 +25,11 @@
         <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
         <h2>En plein centre ville ou en pleine nature</h2>
         <div id="barre_recherche">
-            <i class="fas fa-map-marker-alt"></i>
+            <i id="icone_localisation" class="fas fa-map-marker-alt"></i>
             <input type="search" value="Marseille, France" name="recherche_hebergement" />
-            <button>Rechercher</button>
+            <button id="bouton_recherche">Rechercher</button>
+            <button id="bouton_recherche_responsive"><i id="icone_recherche" class="fas fa-search"></i></button>
         </div>
-
-        <div id="barre_recherche_responsive">
-            <div class="localisation_responsive">
-            <i class="fas fa-map-marker-alt"></i>
-            </div>
-            <input type="search" value="Marseille, France" name="recherche_hebergement" />
-            <button><i class="fas fa-search"></i></button>
-        </div>
-
         <div id="filtres">
             <span>Filtres</span>
             <ul>
@@ -77,7 +69,7 @@
                         <div class="texte_hebergement">
                         <h4>Auberge la Canebière</h4>
                         <p class="prix">Nuit à partir de <b>25&euro;</b></p>
-                        <div>
+                        <div >
                             <span class="blue_star">
                                 <i class="fas fa-star"></i>
                             </span>
